--- a/src/PhotoPreview/PhotoPreview.scss
+++ b/src/PhotoPreview/PhotoPreview.scss
@@ -6,24 +6,44 @@
     flex-direction: column;
 
     .photo-wrapper {
-        display: grid;
-        place-items: center;
-        min-height: calc(100vh - 89px);
+        display: flex;
+        height: fit-content;
+        flex-wrap: wrap;
+
+        .photo-inner {
+            flex: 0 0 100%;
+            position: relative;
+            display: grid;
+            place-items: center;
+            margin-bottom: 55px;
+
+            .download-wrapper {
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                display: grid;
+                place-items: end;
+                
+                a {
+                    text-align: center;
+                    width: 100%;
+                    padding: 5px 0;
+
+                    svg {
+                        fill: $success;
+                    }
+                }
+            }
+
+        }
     }
 
     .footer {
         background-color: $accent;
         flex: 0 0 89px;
-
         display: flex;
         justify-content: space-evenly;
-
-        a {
-            line-height: 89px;
-            flex: 0 0 50%;
-            background-color: $success;
-            text-align: center;
-        }
 
         button {
             flex: 0 0 50%;
